--- a/content/themes/jimmytwo/assets/stylesheets/sass/page-elements/page-content.scss
+++ b/content/themes/jimmytwo/assets/stylesheets/sass/page-elements/page-content.scss
@@ -8,9 +8,6 @@
  * Define variables, helper mixins and animations
  * local to this component
  */
-    // $sample-var:foo;
-    // @mixin sample-mixin($args:default){}
-    // @keyframes sample{}
 
 /**
  * Component classes
@@ -20,7 +17,6 @@
     box-sizing:border-box;
     width:100%;
     margin:100px auto $raw-gutter auto;
-    padding:0 $raw-gutter;
     background:$white;
 }
 
