--- a/content/themes/jimmytwo/assets/stylesheets/sass/page-layouts/layout-post.scss
+++ b/content/themes/jimmytwo/assets/stylesheets/sass/page-layouts/layout-post.scss
@@ -17,7 +17,7 @@
                 a{
                     text-decoration:none;
                 }
-                line-height:1;
+                line-height:1em;
             }
 
             .post-meta{
